Update to avoid scrollbars.

--- a/src/main.css
+++ b/src/main.css
@@ -9,12 +9,14 @@ html {
 html {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   width: 100%;
   height: 100%;
+  margin: 0;
   overflow: auto;
 }
 
@@ -23,6 +25,10 @@ body {
   left: 0; top: 0;
   width: 70%;
   height: 100%;
+}
+
+.editorHost .CodeMirror {
+  font: inherit;
 }
 
 .sideHost {
